# ubuntu-utils

./: .gitignore  LICENSE.txt  build.sh  setup.cfg
src/ubuntuutils/: uu_io.py  uu_package.py  uu_run_command_container.py  uu_user_perm.py
src/ubuntuutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
