[metadata]
name = ubuntuutils
version = 1.0.10
author = Legun George
author_email = georgelegun@gmail.com
description = A few basic utilities for Ubuntu
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
# url = ""
# project_urls =
#     Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
#     repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: Ubuntu

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src